# minskyian_mind

./: .gitignore  CLAUDE.md  README.md  config.toml  main.py  pyproject.toml
docs/: planning.md
scripts/: cleanup_processes.sh  deploy.sh  download_model.py  find_cuda.sh  launch_experiment.sh  launch_training.sh  monitor_training.sh  prompt_sweep.py  train_t5.py
src/minsky/: __init__.py  config.py  edit_model.py  judges.py  llm_client.py  memory.py  orchestrator.py  rooms.py  server.py  tools.py  types.py
src/minsky/prompts/: __init__.py  forecast.py  judges.py  rooms.py  summarizer.py  t5.py
tests/: __init__.py  test_memory.py  test_rooms.py  test_tools.py  test_types.py
tests/manual_tests/: test_cycle.py
